--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "database": "prisma studio"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +21,12 @@
     "@trpc/server": "^10.0.0-proxy-beta.26",
     "autoprefixer": "^10.4.13",
     "next": "^13.0.0",
+    "next-superjson-plugin": "^0.4.8",
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "superjson": "^1.11.0",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
