--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@trpc/react-query": "^10.0.0-proxy-beta.26",
     "@trpc/server": "^10.0.0-proxy-beta.26",
     "@types/node": "^18.11.8",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.24",
     "autoprefixer": "^10.4.13",
     "next": "^13.0.0",
     "next-superjson-plugin": "^0.4.8",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
     "superjson": "^1.11.0",
     "tailwindcss": "^3.2.1",
