--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "superjson": "^1.11.0",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
