--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
     "superjson": "^1.11.0",
+    "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
