feat: add notification

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "18.0.24",
     "@types/react-countup": "^4.3.1",
     "autoprefixer": "^10.4.13",
+    "jotai": "^1.9.2",
     "next": "^13.0.0",
     "next-superjson-plugin": "^0.4.8",
     "nprogress": "^0.2.0",
