--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "database": "prisma studio"
+    "database": "prisma studio",
+    "initial-database": "npx ts-node prisma/scripts/initial.ts"
   },
   "keywords": [],
   "author": "",
