feat: twmp payment draft

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.24",
     "@types/react-countup": "^4.3.1",
     "autoprefixer": "^10.4.13",
+    "crypto-js": "^4.1.1",
     "jotai": "^1.9.2",
     "next": "^13.0.0",
     "next-superjson-plugin": "^0.4.8",
@@ -45,6 +46,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "ts-node": "^10.9.1"
