--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/server": "^10.0.0-proxy-beta.26",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
+    "@types/pusher-js": "^5.1.0",
     "@types/react": "18.0.24",
     "@types/react-countup": "^4.3.1",
     "autoprefixer": "^10.4.13",
@@ -35,6 +36,8 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
     "prisma": "^4.6.1",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.5.0",
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
