fix: add missing modules

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "postcss": "^8.4.18",
     "prisma": "^4.6.1",
     "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.5.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
     "superjson": "^1.11.0",
