feat: use trpc socket subscription

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "database": "prisma studio",
-    "initial-database": "npx ts-node prisma/scripts/initial.ts"
+    "dev-next": "next dev",
+    "dev-wss": "tsx watch src/lib/trpc/wssServer.ts --tsconfig tsconfig.server.json",
+    "build-next": "cross-env NODE_ENV=production next build",
+    "build-server": "tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/lib/trpc/prodServer.js",
+    "db-studio": "prisma studio",
+    "db-seed": "ts-node prisma/scripts/seed.ts",
+    "db-generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -24,16 +27,22 @@
     "@trpc/react-query": "^10.0.0-proxy-beta.26",
     "@trpc/server": "^10.0.0-proxy-beta.26",
     "@types/react": "18.0.25",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^18.11.8",
+    "@types/nprogress": "^0.2.0",
+    "@types/pusher-js": "^5.1.0",
+    "@types/react-countup": "^4.3.1",
+    "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "jotai": "^1.9.2",
     "next": "^13.0.0",
     "next-superjson-plugin": "^0.4.8",
+    "node-fetch": "^3.3.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
     "prisma": "^4.6.1",
-    "pusher": "^5.1.1-beta",
-    "pusher-js": "^7.5.0",
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
@@ -41,17 +50,15 @@
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
+    "ws": "^8.11.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
-    "@types/node": "^18.11.8",
-    "@types/nprogress": "^0.2.0",
-    "@types/pusher-js": "^5.1.0",
-    "@types/react-countup": "^4.3.1",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.1"
   }
 }
