--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "strict": true,
     "lib": ["esnext", "dom"],
     "esModuleInterop": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./*"]
     },
     "target": "es5",
     "allowJs": true,
