--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "@trpc/next": "^10.0.0-proxy-beta.26",
     "@trpc/react-query": "^10.0.0-proxy-beta.26",
     "@trpc/server": "^10.0.0-proxy-beta.26",
-    "@types/react": "18.0.25",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
     "@types/pusher-js": "^5.1.0",
+    "@types/react": "18.0.25",
     "@types/react-countup": "^4.3.1",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
-    "jotai": "^1.9.2",
     "next": "^13.0.0",
     "next-superjson-plugin": "^0.4.8",
     "node-fetch": "^3.3.0",
@@ -53,7 +52,8 @@
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
     "ws": "^8.11.0",
-    "zod": "^3.19.1"
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
