--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
-    "@types/pusher-js": "^5.1.0",
     "@types/react": "18.0.25",
     "@types/react-countup": "^4.3.1",
     "@types/ws": "^8.5.3",
@@ -45,7 +44,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.0",
+    "react-virtuoso": "^3.1.4",
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
     "tailwindcss": "^3.2.1",
