--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tailwindcss": "^3.2.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
+    "web3": "^1.8.1",
     "ws": "^8.11.0",
     "zod": "^3.19.1",
     "zustand": "^4.1.4"
