--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "transpileOnly": true,
     "compilerOptions": {
       "module": "commonjs"
-    }
+    },
+    "require": ["tsconfig-paths/register"]
   }
 }
