--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.6.1",
+    "@tailwindcss/container-queries": "^0.1.0",
     "@tanstack/react-query": "^4.13.5",
     "@trpc/client": "^10.0.0-proxy-beta.26",
     "@trpc/next": "^10.0.0-proxy-beta.26",
