--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-server": "tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/lib/server/host/prod.js",
     "db-studio": "prisma studio",
-    "db-seed": "ts-node prisma/scripts/seed.ts",
+    "db-seed": "ts-node prisma/scripts/seed/seed.ts",
     "db-migrate": "prisma migrate dev",
     "db-generate": "prisma generate"
   },
@@ -43,7 +43,7 @@
     "node-fetch": "^3.3.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
-    "prisma": "^4.6.1",
+    "prisma": "^4.7.1",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
@@ -60,6 +60,7 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma-dbml-generator": "^0.10.0",
