fix: exclude prisma script from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "noUnusedLocals": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist", ".next", "prisma"],
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": {
