--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@headlessui/react": "^1.7.4",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "^4.7.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tanstack/react-query": "^4.13.5",
-    "@trpc/client": "^10.0.0-proxy-beta.26",
-    "@trpc/next": "^10.0.0-proxy-beta.26",
-    "@trpc/react-query": "^10.0.0-proxy-beta.26",
-    "@trpc/server": "^10.0.0-proxy-beta.26",
+    "@trpc/client": "^10.4.3",
+    "@trpc/next": "^10.4.3",
+    "@trpc/react-query": "^10.4.3",
+    "@trpc/server": "^10.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
