--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -35,6 +35,13 @@ jobs:
           username: _json_key
           password: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Assign secrets to .env
+        shell: bash
+        run: |
+          echo "NEXT_PUBLIC_REPORT_URL=${{ secrets.NEXT_PUBLIC_REPORT_URL }}" > .env
+          echo "NEXT_PUBLIC_WEBSOCKET_URL=${{ secrets.NEXT_PUBLIC_WEBSOCKET_URL }}" >> .env
+          echo "NEXT_PUBLIC_RESOURCE_URL=${{ secrets.NEXT_PUBLIC_RESOURCE_URL }}" >> .env
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
@@ -43,10 +50,6 @@ jobs:
           tags: '${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.RUN_IMAGE_TAG }}:latest'
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-        env:
-          NEXT_PUBLIC_REPORT_URL: ${{ secrets.NEXT_PUBLIC_REPORT_URL }}
-          NEXT_PUBLIC_WEBSOCKET_URL: ${{ secrets.NEXT_PUBLIC_WEBSOCKET_URL }}
-          NEXT_PUBLIC_RESOURCE_URL: ${{ secrets.NEXT_PUBLIC_RESOURCE_URL }}
 
       - name: Move cache
         run: |
