--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,10 +36,9 @@ jobs:
           password: ${{ secrets.GCP_SA_KEY }}
 
       - name: Assign secrets to .env
+        shell: bash
         run: |
-          echo "NEXT_PUBLIC_REPORT_URL=${{ secrets.NEXT_PUBLIC_REPORT_URL }}" >> .env
-          echo "NEXT_PUBLIC_WEBSOCKET_URL=${{ secrets.NEXT_PUBLIC_WEBSOCKET_URL }}" >> .env
-          echo "NEXT_PUBLIC_RESOURCE_URL=${{ secrets.NEXT_PUBLIC_RESOURCE_URL }}" >> .env
+          echo "${{ secrets.NEXT_JS_ENV }}" > .env
 
       - name: Build and push
         uses: docker/build-push-action@v3
