--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db-seed": "ts-node prisma/scripts/seed/seed.ts",
     "db-migrate": "prisma migrate dev",
     "db-generate": "prisma generate",
-    "db-reset": "prisma db push --force-reset"
+    "db-reset": "prisma migrate reset"
   },
   "keywords": [],
   "author": "",
@@ -39,7 +39,7 @@
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
-    "next": "^13.0.0",
+    "next": "^13.0.6",
     "next-superjson-plugin": "^0.4.8",
     "node-fetch": "^3.3.0",
     "nprogress": "^0.2.0",
