--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-virtuoso": "^3.1.4",
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
