ci: stick ubuntu to 20.04 due to github actions upgrade to 22.04

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     name: Build and Deploy to Cloud Run
     environment: ${{ inputs.env_input }}
 
