--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@types/nprogress": "^0.2.0",
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.25",
+    "@types/react-dom": "^18.0.9",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
+    "framer-motion": "^7.10.2",
     "next": "^13.0.6",
     "next-superjson-plugin": "^0.4.8",
     "node-fetch": "^3.3.0",
