--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tailwindcss": "^3.2.4",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.9.4",
+    "usehooks-ts": "^2.9.1",
     "web3": "^1.8.1",
     "web3-core": "^1.8.1",
     "web3-eth-contract": "^1.8.1",
