feat: complete basic order flow
- sort options in backend

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.7.4",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
+    "@popperjs/core": "^2.11.6",
     "@prisma/client": "^4.8.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tanstack/react-query": "^4.13.5",
@@ -50,6 +51,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-popper": "^2.3.0",
     "react-virtuoso": "^3.1.4",
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
