--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.8.0",
     "@tailwindcss/container-queries": "^0.1.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.13.5",
     "@trpc/client": "^10.4.3",
     "@trpc/next": "^10.4.3",
