--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-image-crop": "^10.1.4",
     "react-intersection-observer": "^9.4.3",
     "react-virtuoso": "^3.1.5",
     "superjson": "^1.11.0",
