--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.8.0",
+    "@pusher/push-notifications-server": "^1.2.6",
+    "@pusher/push-notifications-web": "^1.1.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.13.5",
@@ -45,6 +47,7 @@
     "lz-string": "^1.5.0",
     "next": "^13.0.6",
     "next-superjson-plugin": "^0.4.8",
+    "next-transpile-modules": "^10.0.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
     "prisma": "^4.8.0",
