--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
     "@prisma/client": "^4.8.0",
-    "@pusher/push-notifications-server": "^1.2.6",
-    "@pusher/push-notifications-web": "^1.1.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.13.5",
@@ -39,6 +37,7 @@
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/web-push": "^3.3.2",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
@@ -65,6 +64,7 @@
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.9.4",
     "usehooks-ts": "^2.9.1",
+    "web-push": "^3.6.2",
     "ws": "^8.11.0",
     "zod": "^3.19.1",
     "zustand": "^4.1.4"
