chore: change name to 夢想發光吧

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "name": "夢想餐飲",
-  "short_name": "夢想餐飲",
+  "name": "夢想發光吧",
+  "short_name": "夢想發光吧",
   "description": "",
   "orientation": "portrait",
   "icons": [
