--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.6.2",
     "ws": "^8.11.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.19.1",
     "zustand": "^4.3.8"
   },
