feat: add rate limiter on checkout

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.13.5",
+    "@trpc-limiter/memory": "^0.0.3",
     "@trpc/client": "^10.4.3",
     "@trpc/next": "^10.4.3",
     "@trpc/react-query": "^10.4.3",
@@ -38,6 +39,7 @@
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/request-ip": "^0.0.41",
     "@types/web-push": "^3.3.2",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
@@ -57,6 +59,7 @@
     "react-image-crop": "^10.1.4",
     "react-intersection-observer": "^9.4.3",
     "react-virtuoso": "^3.1.5",
+    "request-ip": "^3.3.0",
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
     "tailwind-scrollbar": "^2.0.1",
