--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.13.5",
-    "@trpc/client": "^10.4.3",
-    "@trpc/next": "^10.4.3",
-    "@trpc/react-query": "^10.4.3",
-    "@trpc/server": "^10.4.3",
+    "@trpc/client": "^10.44.1",
+    "@trpc/next": "^10.44.1",
+    "@trpc/react-query": "^10.44.1",
+    "@trpc/server": "^10.44.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
@@ -49,9 +49,11 @@
     "next": "^13.4.8",
     "next-superjson-plugin": "^0.5.9",
     "nprogress": "^0.2.0",
+    "p-queue": "^8.0.0",
     "postcss": "^8.4.18",
     "prisma": "^4.15.0",
     "qrcode": "^1.5.1",
+    "rate-limiter-flexible": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
