--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev-next": "next dev",
     "dev-wss": "tsx watch src/lib/server/host/dev.ts --tsconfig tsconfig.server.json",
     "build-next": "cross-env NODE_ENV=production next build",
-    "build-server": "tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/lib/server/host/prod.js",
+    "build-server": "tsc --project tsconfig.server.json && tsc-alias -p tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node --experimental-specifier-resolution=node ./dist/lib/server/host/prod.js",
     "db-studio": "prisma studio",
     "db-seed": "ts-node prisma/scripts/seed/seed.ts",
     "db-migrate": "prisma migrate dev",
@@ -65,7 +65,7 @@
     "tailwind-merge": "^1.8.0",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
-    "tsconfig-paths": "^4.1.0",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.3.2",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.6.2",
@@ -79,5 +79,6 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "ts-node": "^10.9.1",
     "tsx": "^3.12.1"
-  }
+  },
+  "type": "module"
 }
