chore: clean dead code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,5 @@
     "noUnusedLocals": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist", ".next", "prisma", "scripts"],
-  "ts-node": {
-    "transpileOnly": true,
-    "compilerOptions": {
-      "module": "esnext"
-    },
-    "require": ["tsconfig-paths/register"]
-  }
+  "exclude": ["node_modules", "dist", ".next", "prisma", "scripts"]
 }
