--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build-server": "tsc --project tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node --experimental-specifier-resolution=node ./dist/lib/server/host/prod.js",
     "db-studio": "prisma studio",
-    "db-seed": "ts-node prisma/scripts/seed/seed.ts",
+    "db-seed": "tsc prisma/scripts/seed/seed.ts",
     "db-migrate": "prisma migrate dev",
     "db-generate": "prisma generate",
     "db-reset": "prisma migrate reset",
-    "db-helper": "ts-node prisma/scripts/helpers/remove-users-tokens.ts"
+    "db-helper": "tsc prisma/scripts/helpers/remove-users-tokens.ts"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +38,6 @@
     "@types/qrcode": "^1.5.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@types/request-ip": "^0.0.41",
     "@types/web-push": "^3.3.2",
     "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
@@ -60,7 +59,6 @@
     "react-image-crop": "^10.1.4",
     "react-intersection-observer": "^9.4.3",
     "react-virtuoso": "^3.1.5",
-    "request-ip": "^3.3.0",
     "superjson": "^1.11.0",
     "tailwind-merge": "^1.8.0",
     "tailwind-scrollbar": "^2.0.1",
@@ -77,7 +75,6 @@
   "devDependencies": {
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "ts-node": "^10.9.1",
     "tsx": "^3.12.1"
   },
   "type": "module"
