feat: upgrade to sse [no ci]

--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-next": "next dev",
-    "dev-wss": "tsx watch src/lib/server/host/dev.ts --tsconfig tsconfig.server.json",
-    "build-next": "cross-env NODE_ENV=production next build",
-    "build-server": "tsc --project tsconfig.server.json && tsc-alias -p tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production TS_NODE_BASEURL=./dist node --experimental-specifier-resolution=node ./dist/lib/server/host/prod.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "db-studio": "prisma studio",
-    "db-seed": "tsc prisma/scripts/seed/seed.ts",
     "db-migrate": "prisma migrate dev",
     "db-generate": "prisma generate",
-    "db-reset": "prisma migrate reset",
+    "db-seed": "tsx prisma/scripts/seed/seed.ts",
     "cmd": "tsx prisma/cmd.ts"
   },
   "keywords": [],
@@ -26,14 +23,14 @@
     "@headlessui/react": "^1.7.4",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "^6.3.1",
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@tanstack/react-query": "^4.13.5",
-    "@trpc/client": "^10.44.1",
-    "@trpc/next": "^10.44.1",
-    "@trpc/react-query": "^10.44.1",
-    "@trpc/server": "^10.44.1",
+    "@tanstack/react-query": "^5.62.8",
+    "@trpc/client": "11.0.0-rc.808",
+    "@trpc/next": "11.0.0-rc.808",
+    "@trpc/react-query": "11.0.0-rc.808",
+    "@trpc/server": "11.0.0-rc.808",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
@@ -41,18 +38,17 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/web-push": "^3.3.2",
-    "@types/ws": "^8.5.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "framer-motion": "^10.16.4",
     "lz-string": "^1.5.0",
-    "next": "^13.4.8",
-    "next-superjson-plugin": "^0.5.9",
+    "next": "^14.2.24",
+    "next-superjson-plugin": "^0.6.3",
     "nprogress": "^0.2.0",
     "p-queue": "^8.0.0",
     "postcss": "^8.4.18",
-    "prisma": "^4.15.0",
+    "prisma": "^6.3.1",
     "qrcode": "^1.5.1",
     "rate-limiter-flexible": "^3.0.6",
     "react": "^18.2.0",
@@ -65,16 +61,15 @@
     "tailwind-merge": "^1.8.0",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4",
-    "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.2",
+    "typescript": "^5.7.3",
     "usehooks-ts": "^2.9.1",
     "web-push": "^3.6.2",
-    "ws": "^8.11.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "tsc-alias": "^1.8.8",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tsx": "^3.12.1"
