chore: update TRPC dependencies and improve event listener handling

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8085",
     "build": "next build",
     "start": "next start",
     "db-studio": "prisma studio",
@@ -27,10 +27,10 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^5.62.8",
-    "@trpc/client": "11.0.0-rc.808",
-    "@trpc/next": "11.0.0-rc.808",
-    "@trpc/react-query": "11.0.0-rc.808",
-    "@trpc/server": "11.0.0-rc.808",
+    "@trpc/client": "11.0.0-rc.828",
+    "@trpc/next": "11.0.0-rc.828",
+    "@trpc/react-query": "11.0.0-rc.828",
+    "@trpc/server": "11.0.0-rc.828",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
