feat: integrate Pusher for real-time notifications and replace server event handling in TRPC API routes

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@tailwindcss/container-queries": "^0.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^5.62.8",
-    "@trpc/client": "11.0.0-rc.828",
-    "@trpc/next": "11.0.0-rc.828",
-    "@trpc/react-query": "11.0.0-rc.828",
-    "@trpc/server": "11.0.0-rc.828",
+    "@trpc/client": "11.0.0-rc.808",
+    "@trpc/next": "11.0.0-rc.808",
+    "@trpc/react-query": "11.0.0-rc.808",
+    "@trpc/server": "11.0.0-rc.808",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
@@ -50,6 +50,8 @@
     "p-queue": "^8.0.0",
     "postcss": "^8.4.18",
     "prisma": "^6.4.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "qrcode": "^1.5.1",
     "rate-limiter-flexible": "^3.0.6",
     "react": "^18.2.0",
