--- a/package.json
+++ b/package.json
@@ -77,5 +77,6 @@
     "tsc-alias": "^1.8.8",
     "tsx": "^3.12.1"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
