--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,11 @@
     "jsx": "preserve",
     "noUnusedLocals": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "trigger.config.ts"
+  ],
   "exclude": ["node_modules", "dist", ".next", "prisma", "scripts"]
 }
