--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db-migrate": "prisma migrate dev",
     "db-generate": "prisma generate",
     "db-seed": "tsx prisma/scripts/seed/seed.ts",
-    "cmd": "tsx prisma/cmd.ts"
+    "cmd": "tsx prisma/cmd.ts",
+    "test:signal": "tsx scripts/staff-signal-trigger.ts"
   },
   "keywords": [],
   "author": "",
@@ -39,7 +40,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "^10.4.13",
-    "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "framer-motion": "^10.16.4",
     "lz-string": "^1.5.0",
@@ -56,6 +56,7 @@
     "rate-limiter-flexible": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-hook-form": "^7.45.1",
     "react-image-crop": "^10.1.4",
     "react-intersection-observer": "^9.4.3",
@@ -72,10 +73,11 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "dotenv": "^17.2.4",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tsc-alias": "^1.8.8",
-    "tsx": "^3.12.1"
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.21.0"
   },
   "type": "module",
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
